# lct_2023_Krasnodar

./: .env  README.md  docker-compose.yaml
configs/rabbit/: definitions.json
configs/yolo_train/: data.yaml
configs/yolo_train/train/labels/: bb145979-screen_09-11-2023_003104_png.rf.7a6e062d5cdfe58d3a07fca8333ddf88.txt  c32c258a-screen_09-11-2023_174228_png.rf.363a151cd622f30ba175681830858cc0.txt  e162a3ec-photo_2023-11-09_22-38-20_jpg.rf.43964246e5f99d563d20e69d9049e98d.txt  f0ab508d-screen_08-11-2023_235116_png.rf.7e5e964884f30d5920025c1fa3dc8c80.txt  f5c4d393-photo_2023-11-09_18-17-55_jpg.rf.6134a913685b59147d258958b1823796.txt  (+2 more)
lct/: .env  .gitignore  Dockerfile  README.md  pyproject.toml
lct/lct/: auth.py  config.py  main.py  send.py  start.py
lct/lct/components/: archive_from_history.py  archive_video_params.py  edit_img.py  existing_stream_info.py  frame_list.py  recognize_setting_form.py  show_tracking.py  watch.py
lct/lct/docs/: api_example.py
lct/lct/models/: archive_from_history.py  frame.py  rectangle.py
lct/lct/pages_/: __init__.py  api.py  fakes.py  history.py  rtc.py  settings.py  teach.py  videos_from_archive.py
lct/lct/rabbit/: connection.py
lct/lct/rabbit/producer/: base_producer.py
lct/lct/services/: mongo.py
lct/lct/utils/: draw_recs_on_img.py  frames_to_arc.py  from_archive.py
notif/: .env  Dockerfile  README.md  pyproject.toml
notif/notif/: config.py  example.py  main.py
notif/notif/models/: event.py  message.py
worker/: .env  .gitignore  Dockerfile  README.md  pyproject.toml
worker/worker/: config.py  main.py
worker/worker/ai_models/: yolo_model.py
worker/worker/models/: event.py  rectangle.py  task.py
worker/worker/rabbit/: connection.py
worker/worker/rabbit/consumers/: base_consumer.py  video_consumer.py
worker/worker/services/: mongo.py  notificator.py
worker/worker/utils/: video_converter.py
